--- a/database/mongo-secrets.yaml
+++ b/database/mongo-secrets.yaml
@@ -4,5 +4,5 @@ metadata:
   name: mongo-secret
 type: Opaque
 data:
-  username: YWRtaW4=
-  password: YWRtaW4=
+  username: am9td2FzaQ==
+  password: OGtMeGhmTGFCMFZTNTZiRg==
